# dairy-store

./: .coveragerc  .gitignore  README.md  alembic.ini  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 3b3b7932d5a1_create_batches_and_consumption_records.py  9da85c0c28d9_seed_initial_batches.py
app/: __main__.py
app/api/: admin_endpoints.py  batch_endpoints.py
app/config/: dependency_injection.py  settings.py
app/db/: models.py
app/domain/: admin_service.py  batch_port.py  batch_service.py  record_port.py
app/repositories/: batch_repository.py  db_batch_repo.py  db_record_repo.py  record_repository.py
app/repositories/db/: models.py  session.py
app/schemas/: batches_schema.py  consumption_record.py
tests/end_to_end/: locustfile.py
tests/integration/api/: test_concurrency.py  test_create_batches.py
