[project]
name = "dairy-store"
version = "0.0.1"
description = "Dairy Store"
authors = [{ name = "Brendan Buckley" }]
requires-python = ">=3.12"

dependencies = [
  # Web framework + server
  "fastapi>=0.124.2,<1.0.0",           # latest FastAPI 0.x :contentReference[oaicite:0]{index=0}
  "uvicorn[standard]>=0.38.0,<1.0.0",  # latest Uvicorn :contentReference[oaicite:1]{index=1}

  # DB & migrations
  "sqlalchemy>=2.0.45,<3.0.0",         # latest SQLAlchemy 2.x :contentReference[oaicite:2]{index=2}
  "alembic>=1.17.2,<2.0.0",            # latest Alembic :contentReference[oaicite:3]{index=3}
  "asyncpg>=0.31.0,<1.0.0",            # async Postgres driver :contentReference[oaicite:4]{index=4}

  # Validation & settings
  "pydantic>=2.12.5,<3.0.0",           # latest Pydantic v2 :contentReference[oaicite:5]{index=5}
  "pydantic-settings>=2.12.0,<3.0.0",  # latest pydantic-settings :contentReference[oaicite:6]{index=6}

  # HTTP client (for external calls or tests)
  "httpx>=0.28.1,<0.29.0",             # latest HTTPX :contentReference[oaicite:7]{index=7}

  # Env config
  "python-dotenv>=1.2.1,<2.0.0",       # latest python-dotenv :contentReference[oaicite:8]{index=8}

  # Testing
  "pytest>=9.0.2,<10.0.0",             # latest pytest :contentReference[oaicite:9]{index=9}
  "pytest-asyncio>=1.3.0,<2.0.0",      # asyncio support for pytest :contentReference[oaicite:10]{index=10}
  "pytest-mock>=3.15.1,<4.0.0",        # mocker fixture :contentReference[oaicite:11]{index=11}
  "testcontainers>=4.13.3,<5.0.0",     # dockerized integration tests :contentReference[oaicite:12]{index=12}

  # Code quality
  "black>=24.4.1,<25.0.0",             # formatter with 3.12+ support :contentReference[oaicite:13]{index=13}
  "ruff>=0.14.8,<1.0.0",               # ultra-fast linter/formatter :contentReference[oaicite:14]{index=14}
]